--- a/clients-service/src/main/resources/application-docker.yml
+++ b/clients-service/src/main/resources/application-docker.yml
@@ -2,7 +2,7 @@
 
 spring:
   datasource:
-    url: jdbc:mysql://mysqldb:3306/master_microservices?createDatabaseIfNotExist=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10
+    url: jdbc:mysql://mysqldb:3306/master_microservices?createDatabaseIfNotExist=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false
     username: root
     password: 4kDGQDYe4JxDjRd
     driver-class: com.mysql.jdbc.Driver
