--- a/clients-service/src/main/resources/application.yml
+++ b/clients-service/src/main/resources/application.yml
@@ -5,7 +5,7 @@ spring:
     name: clients-service
 
   datasource:
-    url: jdbc:mysql://localhost:3307/master_microservices?createDatabaseIfNotExist=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false
+    url: jdbc:mysql://localhost:3307/master_microservices?createDatabaseIfNotExist=true&autoReconnect=true&failOverReadOnly=false&maxReconnects=10&useSSL=false&allowPublicKeyRetrieval=true
     username: root
     password: 4kDGQDYe4JxDjRd
     driver-class: com.mysql.jdbc.Driver
