--- a/gateway-service/src/main/resources/application.yml
+++ b/gateway-service/src/main/resources/application.yml
@@ -1,5 +1,3 @@
-
-
 server:
   port: 8060
 
@@ -23,6 +21,8 @@ spring:
               - Path=/clients/**
   application:
     name: gateway-service
+  config:
+    import:
 
 
 springdoc:
